fix avatar alignment on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,9 +7,9 @@
   --text-secondary: #73787c;
   --text-link: var(--color-primary);
   --text-on-accent: #ffffff;
-
-  --bg-primary: #ffffff;
-  --bg-secondary: #f8f9fa;
+  
+  --bg-primary: #fcfcfd;
+  --bg-secondary: #f7f8fa;
   --bg-accent: #f2f6fb;
 
   --maxw: 1024px;
